--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
               </svg>
             </a>
           </li>
-          <!--здесь может быть еще одна кнопка социальных сетей<li><a class="social-button" href="#"></a></li>-->
+          <!--здесь может быть еще одна кнопка<li><a class="social-button" href="#"></a></li>-->
         </ul>
       </section>
       <div class="social-discount">
