--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </nav>
     </div>
   </header>
-
+<!-- publishing the project to check -->
   <section class="slider">
     <div class="container">
       <h2 class="visually-hidden">Преимущества</h2>
