--- a/catalog.html
+++ b/catalog.html
@@ -64,15 +64,15 @@
             <fieldset class="grid-fieldset reset-fieldset">
               <legend class="legend">Сетка</legend>
               <ul class="type reset-list">
-                <li class="filter-option">
+                <li tabindex="0" class="filter-option">
                   <input class="visually-hidden filter-input-radio" type="radio" name="grid" value="adaptive-grid" id="filter-adaptive-grid" checked>
                   <label for="filter-adaptive-grid">Адаптивная</label>
                 </li>
-                <li class="filter-option">
+                <li tabindex="0" class="filter-option">
                   <input class="visually-hidden filter-input-radio" type="radio" name="grid" value="fixed-grid" id="filter-fixed-grid">
                   <label for="filter-fixed-grid">Фиксированная</label>
                 </li>
-                <li class="filter-option">
+                <li tabindex="0" class="filter-option">
                   <input class="visually-hidden filter-input-radio" type="radio" name="grid" value="fluid-grid" id="filter-fluid-grid">
                   <label for="filter-fluid-grid">Резиновая</label>
                 </li>
@@ -82,23 +82,23 @@
             <fieldset class="specificities-fieldset reset-fieldset">
               <legend class="legend">Особенности</legend>
               <ul class="details reset-list">
-                <li class="filter-option">
+                <li tabindex="0" class="filter-option">
                   <input class="visually-hidden filter-input-checkbox" type="checkbox" name="slider" id="filter-slider" checked>
                   <label for="filter-slider">Слайдер</label>
                 </li>
-                <li class="filter-option">
+                <li tabindex="0" class="filter-option">
                   <input class="visually-hidden filter-input-checkbox" type="checkbox" name="advantages" id="filter-advantages">
                   <label for="filter-advantages">Блок преимуществ</label>
                 </li>
-                <li class="filter-option">
+                <li tabindex="0" class="filter-option">
                   <input class="visually-hidden filter-input-checkbox" type="checkbox" name="news" id="filter-news" checked>
                   <label for="filter-news">Новости</label>
                 </li>
-                <li class="filter-option">
+                <li tabindex="0" class="filter-option">
                   <input class="visually-hidden filter-input-checkbox" type="checkbox" name="gallery" id="filter-gallery">
                   <label for="filter-gallery">Галерея</label>
                 </li>
-                <li class="filter-option">
+                <li tabindex="0" class="filter-option">
                   <input class="visually-hidden filter-input-checkbox" type="checkbox" name="basket" id="filter-basket">
                   <label for="filter-basket">Корзина</label>
                 </li>
@@ -145,7 +145,7 @@
         <div class="catalog-shop">
           <ul class="catalog-list reset-list">
 
-            <li class="catalog-item">
+            <li tabindex="0" class="catalog-item">
               <h2 class="visually-hidden">Седона</h2>
               <div class="catalog-image-wrapper">
                 <img src="img/img-sedona-jpg.jpg" width="360" height="576" alt="Информационный сайт для туристов">
@@ -157,7 +157,7 @@
               </section>
             </li>
 
-            <li class="catalog-item">
+            <li tabindex="0" class="catalog-item">
               <h2 class="visually-hidden">Pink App</h2>
               <div class="catalog-image-wrapper">
                 <img src="img/img-pink-jpg.jpg" width="360" height="576" alt="Продуктовый лендинг приложения для iOS и Android">
@@ -169,7 +169,7 @@
               </section>
             </li>
 
-            <li class="catalog-item">
+            <li tabindex="0" class="catalog-item">
               <h2 class="visually-hidden">Barbershop</h2>
               <div class="catalog-image-wrapper">
                 <img src="img/img-barbershop-jpg.jpg" width="360" height="576" alt="Сайт салона красоты для мужчин.">
@@ -181,7 +181,7 @@
               </section>
             </li>
 
-            <li class="catalog-item">
+            <li tabindex="0" class="catalog-item">
               <h2 class="visually-hidden">Mishka</h2>
               <div class="catalog-image-wrapper">
                 <img src="img/img-mishka-jpg.jpg" width="360" height="576" alt="Магазин товаров ручной работы для дома">
@@ -194,7 +194,7 @@
             </li>
 
 
-            <li class="catalog-item">
+            <li tabindex="0" class="catalog-item">
               <h2 class="visually-hidden">A Plus</h2>
               <div class="catalog-image-wrapper">
                 <img src="img/img-aplus-jpg.jpg" width="360" height="576" alt="Лендинг курсов повышения квалификации">
@@ -207,7 +207,7 @@
             </li>
 
 
-            <li class="catalog-item">
+            <li tabindex="0" class="catalog-item">
               <h2 class="visually-hidden">КВАСТ</h2>
               <div class="catalog-image-wrapper">
                 <img src="img/img-kvast-jpg.jpg" width="360" height="576" alt="Промо-сайт производителя крафтового кваса">
